# intro-to-rag

./: Dockerfile  docker-compose.yaml  ingest.py  notebook.ipynb  presistent_rag.ipynb  presistent_rag_ingest.ipynb  pyproject.toml  rag_helper.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
Module-2-Vector Search/: Vector_search.ipynb  vector_search_pgvector.ipynb  vector_search_presistent.ipynb
Module-4-Evaluation/: Agent_evals.ipynb  data-gen.ipynb  evaluation_utils.py  rag_evals.ipynb  revision.md  search_eval.ipynb
Module-5-Monotoring/: Makefile  app.py  assistant.py  dashboard.py  db_query.py  evaluation_utils.py  generate_data.py  judge.py  metrics.py
Module-6-Best Practices/: hybrid-search-and-reranking-es.ipynb  hybrid-search-langchain.ipynb
part-1-Agents/: Agents.ipynb
part-1-RAG-notebooks/: notebook.ipynb
part_1_RAG/: rag_cleaned.ipynb  rag_helper.py
