[project]
name = "intro-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.4.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "make>=0.1.6.post2",
    "minsearch>=0.1.0",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlitesearch>=0.0.5",
    "streamlit>=1.58.0",
    "toyaikit>=0.0.11",
]
